--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "devDependencies": {
     "@types/jasmine": "^3.5.14",
     "jasmine": "^3.6.1",
-    "typescript": "beta"
+    "typescript": "^4.1.0-beta"
   }
 }
