--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ts-rest-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "Client.ts",
   "scripts": {
     "test": "tsc && jasmine specs/test.spec.js"
   },
